2001-05-03  James Henstridge  <james@daa.com.au>

	* codegen/docgen.py (DocWriter): handle output of constructor and
	method docs.  Use overrides file so as not to output info about
	methods we don't actually wrap.

	* codegen/Makefile.am (noinst_PYTHON): update file list.

	* codegen/__init__.py (__all__): update module list.

	* codegen/mergedefs.py: same here.

	* codegen/docgen.py (DocWriter.__init__): same here.

	* codegen/codegen.py: import defsparser instead.

	* codegen/defsparser.py: rename from parser.py.

2001-05-01  James Henstridge  <james@daa.com.au>

	* autogen.sh: fix up autogen script to call autoheader

	* gtk/gtk.defs: remove colorsel palette manipulation functions.

2001-05-01  Matthew Wilson  <msw@redhat.com>

	* acinclude.m4 (AM_PATH_PYTHON_JH): only run the AC_PATH_PROGS
	check if we don't have a PYTHON environment variable set

	* autogen.sh: run autoheader

	* acinclude.m4 (AM_PATH_PYTHON_JH): s/AC_PATH_PROG/AC_PATH_PROGS/
	so we check for more than one python interpreter.

2001-04-28  James Henstridge  <james@daa.com.au>

	* Makefile.am, pygtk/Makefile.am: limit the symbols exported by
	the various modules to just their module init function.

	* gtk/Makefile.am (_gtkmodule_la_LDFLAGS): only export the
	init_gtk symbol.

	* examples/pygtk-demo/demos/toolbar.py (main): remove buttons that
	called set_space_size method.

	* gtk/__init__.py: remove __all__ definition.  It causes problems
	with python 2.1.

	* gtk/gtk.override: updated GtkColorSelection method overrides
	(ignore): remove gtk_entry_new from ignore list, as other entry
	constructor is gone.

	* gtk/gtk.defs: updates to make it work with current gtk+

2001-04-21  James Henstridge  <james@daa.com.au>

	* codegen/docgen.py, codegen/docextract.py: start of automatic
	documentation generator.

2001-04-08  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override: same here.

	* gtk/gtk-types.c (_pygtk_register_boxed_types): more fixups
