@@ -3266,35 +3266,6 @@
   (return-type guint16)
 )
 
-(method get_palette_size
-  (of-object ColorSelection (Gtk))
-  (c-name gtk_color_selection_get_palette_size)
-  (return-type gint)
-)
-
-(method get_palette_color
-  (of-object ColorSelection (Gtk))
-  (c-name gtk_color_selection_get_palette_color)
-  (return-type gboolean)
-  (parameter (type-and-name gint index))
-  (parameter (type-and-name GdkColor* color))
-)
-
-(method set_palette_color
-  (of-object ColorSelection (Gtk))
-  (c-name gtk_color_selection_set_palette_color)
-  (return-type none)
-  (parameter (type-and-name gint index))
-  (parameter (type-and-name GdkColor* color))
-)
-
-(method unset_palette_color
-  (of-object ColorSelection (Gtk))
-  (c-name gtk_color_selection_unset_palette_color)
-  (return-type none)
-  (parameter (type-and-name gint index))
-)
-
 (method is_adjusting
   (of-object ColorSelection (Gtk))
   (c-name gtk_color_selection_is_adjusting)
