@@ -1,3 +1,9 @@
+2001-05-05  James Henstridge  <james@daa.com.au>
+
+	* codegen/docgen.py (DocbookDocWriter.output_toc): Produce kind of
+	nice docbook documentation.  Example output available at
+	http://www.gnome.org/~james/pygtk-docs/.
+
 2001-05-03  James Henstridge  <james@daa.com.au>
 
 	* codegen/docgen.py (DocWriter): handle output of constructor and
